<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">imReporter</string>
    <!--  -->
    <string-array name="categories">
        <item>Environment</item>
        <item>Workspace</item>
        <item>Transport</item>
        <item>Dengue</item>
    </string-array>
    <!--  -->
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <!--  -->
    <string name="all_posts">List	</string>
    <string name="map">Map</string>
    <string name="submit">Submit &#8230;</string>
    <string name="leader_board">Leader</string>
    <string name="settings">Settings</string>
    <string name="title_mapview">Map View</string>
    <string name="title_listview">List View</string>
    <string name="title_submit">Submit</string>
    <string name="title_leader_board">Leader Board</string>
    <string name="title_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="feed_back">Feedback</string>
    <string name="empty_str"></string>
    <string name="refresh">Refresh</string>
    <string name="updating">Updating &#8230;</string>
    <string name="individual_severity">Individual severity: %s %%</string>
    <string name="aggregate_severity">Aggregate severity: %s %%</string>
    <string name="location_hint">Fusionpolis 20N</string>
    <string name="label_category">Category:</string>
    <!--  -->
    <string name="error_to_load_posts">Error to load posts, please try again later.</string>
    <string name="error_to_load_users">Error to load users, please try again later.</string>
    <string name="error_to_submit">Error to submit.</string>
    <string name="thanks_for_feedback">Thanks for your feedback.</string>
    <string name="str_thanks_for_post">Thanks for your report.</string>
    <string name="error_login">Error to login.</string>
    <string name="str_login_success">Login Success!</string>
    <string name="error_not_match">Email and Password not match</string>
    <string name="error_login_first">Please login before submit.</string>
    <!--  -->
    <string name="pref_login">Login</string>
    <string name="pref_share">Share this app</string>
    <string name="pref_feedback">Feedback</string>
    <string name="pref_about">About this app</string>
    <string name="pref_settings">Settings</string>
    <string name="pref_category_login">Login</string>
    <string name="pref_category_about">More</string>
    <string name="pref_category_endorsement">Endorsement</string>
    <string name="pref_endorsement_request">Who asked for your endorsement</string>
    <string name="pref_endorsing_requests">Who requested to endorse you</string>
    
    <!--  -->
    <string name="optional_email">Email/Name (optional)</string>
    <string name="hint_desc">Description</string>
    <string name="hint_tag">Tag</string>
    <string name="label_serverity">Serverity:</string>
    <string name="submit">Submit</string>
    <string name="gps_locating">Locating &#8230;</string>
    <string name="gps_error">Error</string>
    <string name="gps_enable">Please enable your GPS.</string>
    <string name="gps_disabled">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="gps_go_settings">Goto Settings</string>
    <string name="gps_cancel">Cancel</string>
    <string name="validate_error">Error</string>
    <!--  -->
    <string name="error_image_empty">Photo doesn\'t exsits.</string>
    <string name="error_description_empty">Description is empty.</string>
    <string name="error_endorse">Error to endorse.</string>
    <string name="error_tag_empty">Tag is empty</string>
    <!--  -->
    <string name="contribution_power">Contribution Power</string>
    <string name="endorsing_power">Endorsing Power</string>
    <string name="action_thumb_up">Thumb up</string>
    <string name="action_thumb_down">Thumb down</string>
    
     <!-- outgoing state 0:  -->
     <string name="not_endorsing">Not endorsing</string>
     <!-- 
     <string name="request_to_endorse">Request to endorse him/her</string>
     -->
     <string name="request_to_endorse">Endorse him/her</string>
     
     <!-- outgoing state 1:  -->
     <string name="requested_to_endorse">Requested to endorse</string>
     <string name="waiting_for_response">Waiting for response</string>
     
     <!-- outgoing state 2:  -->
     <string name="endorse_user">Endorse the user?</string>
     <string name="yes">yes</string>
     <string name="no">no</string>
        <!-- outgoing state 3:  -->
     <string name="endorsed">Endorsed</string>
     <string name="revoke">Revoke Endorsement</string>
     
     <!-- incoming  state -->
     <string name="not_requested">Not requested</string>
     <!-- 
     <string name="request_for_endorsement">Request to be endorsed by him/her</string>
     -->
     <string name="request_for_endorsement">Be endorsed by him/her</string>
     <string name="requested_for_endorsement">Requested for help</string>
     <string name="accept_endorsement">Accept endorsement?</string>
     <string name="endorsed_by_this_user">Endorsed by this user</string>
     
     <string name="title_requests">Requests</string>
     

</resources>