<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@drawable/menu_settings"
    android:title="@string/pref_settings" >

    <PreferenceCategory android:title="@string/pref_category_login" >
    </PreferenceCategory>

    <Preference
        android:icon="@drawable/menu_login"
        android:key="pref_login"
        android:title="@string/pref_login" >
    </Preference>

    <PreferenceCategory android:title="@string/pref_category_about" >
        <Preference
            android:icon="@drawable/menu_feedback"
            android:key="pref_feedback"
            android:title="@string/pref_feedback" >
        </Preference>
        <Preference
            android:icon="@drawable/menu_about"
            android:key="pref_about"
            android:title="@string/pref_about" >
        </Preference>
        <Preference
            android:icon="@drawable/menu_share"
            android:key="pref_share"
            android:title="@string/pref_share" >
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_endorsement" >
        <Preference
            android:icon="@drawable/menu_up"
            android:key="pref_endorsement_requests"
            android:title="@string/pref_endorsement_request" >
        </Preference>
        <Preference
            android:icon="@drawable/menu_down"
            android:key="pref_endorsing_requests"
            android:title="@string/pref_endorsing_requests" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>