<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    


    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.001">
        
        <TextView
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:drawablePadding="10dp"
        android:fontFamily="Georgia"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="24sp" />
        
        <ImageView
        android:id="@+id/user_photo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:cropToPadding="true" />
        
    </LinearLayout>


   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.001" >

        <TextView
            android:id="@+id/text_CP_short_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="CP"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/text_EP_short_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="EP"
            android:textSize="26sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.002" >
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_contribution_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/contribution_power"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_endorsement_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/endorsing_power"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.004"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/user_cp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/user_ep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="30sp" />

    </LinearLayout>
   

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_endorse"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/not_endorsing"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_be_endorsed_by"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
             android:text="@string/not_requested"
            android:textSize="16sp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
     
        <ImageView
            android:id="@+id/image_checkicon_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
             android:layout_weight="0.5"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/image_checkicon_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:gravity="center"/>

    </LinearLayout>

 	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
            <TextView
            android:id="@+id/text_endorse_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:textColor="#0066FF"
            android:text="@string/request_to_endorse"
            android:textSize="16sp" />
                   
            <TextView
            android:id="@+id/text_be_endorsed_by_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:textColor="#0066FF"
            android:text="@string/request_for_endorsement"
            android:textSize="16sp" />
            
        </LinearLayout>
    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.005"
	        android:orientation="horizontal">
	        
	        <TextView
	         android:id="@+id/text_endorse_yes"
	         android:layout_width="wrap_content"
	         android:layout_height="match_parent"
	         android:layout_weight="0.25"
	         android:gravity="center"
	         android:textColor="#0066FF"
	         android:textSize="18sp" />
	        
	         <TextView
	         android:id="@+id/text_endorse_no"
	         android:layout_width="wrap_content"
	         android:layout_height="match_parent"
	         android:layout_weight="0.25"
	         android:gravity="center"
	         android:textColor="#0066FF"
	         android:textSize="18sp" />
	         
	         <TextView
	         android:id="@+id/text_be_endorsed_by_yes"
	         android:layout_width="wrap_content"
	         android:layout_height="match_parent"
	         android:layout_weight="0.25"
	         android:gravity="center"
	         android:textColor="#0066FF"
	         android:textSize="18sp" />
	         
	         
	         <TextView
	         android:id="@+id/text_be_endorsed_by_no"
	         android:layout_width="wrap_content"
	         android:layout_height="match_parent"
	         android:layout_weight="0.25"
	         android:gravity="center"
	         android:textColor="#0066FF"
	         android:textSize="18sp" />
	        
	        
	    </LinearLayout>
	    
	    
    
    
</LinearLayout>